--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body {
     height: 100vh;
     background-image: url();
     background-size: cover;
-    background-position: center:
+    background-position: center;
 
 }
 .container {
